--- a/bower.json
+++ b/bower.json
@@ -23,10 +23,10 @@
   ],
   "dependencies": {
     "angular": "~1.3.7",
+    "bootstrap": "~3.3.1",
     "flat-ui": "~2.2.2",
     "jquery": "~2.1.1",
     "angular-ui-router": "~0.2.13",
-    "restangular": "~1.4.0",
-    "bootstrap": "~3.3.1"
+    "restangular": "~1.4.0"
   }
 }
